--- a/css/styles.css
+++ b/css/styles.css
@@ -84,24 +84,15 @@ div.infobox { background:transparent url(../i/denim.jpg);margin:0;padding:30px;c
 	
 /* styles */
 body { background:none;padding:0;margin:0; }
-#backkustom { width:100%;	
-/* IE10 Consumer Preview */ 
-background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
-
-/* Mozilla Firefox */ 
-background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
-
-/* Opera */ 
-background-image: -o-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
-
-/* Webkit (Safari/Chrome 10) */ 
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #E8E8E8));
-
-/* Webkit (Chrome 11+) */ 
-background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #E8E8E8 100%);
-
-/* W3C Markup, IE10 Release Preview */ 
-background-image: linear-gradient(to bottom, #FFFFFF 0%, #E8E8E8 100%);
+#backkustom { width:100%; background: #00b7ea; /* Old browsers */
+background: -moz-linear-gradient(top,  #00b7ea 0%, #009ec3 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00b7ea), color-stop(100%,#009ec3)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #00b7ea 0%,#009ec3 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #00b7ea 0%,#009ec3 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #00b7ea 0%,#009ec3 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #00b7ea 0%,#009ec3 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', endColorstr='#009ec3',GradientType=0 ); /* IE6-9 */
+;
 }
 #wrapper { width:1070px;padding:0 30px;margin:0 auto;background:#fff;box-shadow: 12px 0 8px -4px #9addff, -12px 0 8px -4px #4dc4ff; }
 	
